# FastAPI-Docker-Poetry

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  samconfig.toml  template.yml
.aws-sam/: build.toml
backend/: .env  main.py
src/: requirements.txt
src/backend/: main.py
src/backend/api/app/routers/: default.py
src/backend/api/core/: config.py
